[package]
name = "server_rust"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
capnpc = "0.18.0"

[dependencies]
capnp = "0.18.0"
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["full", "net", "rt", "macros"]}
tokio-util = { version = "0.7.4", features = ["compat"] }
capnp-rpc = "0.19.2"

[profile.release]
strip = true
